--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ data
 tests/test_data/fictrac/test.avi
 tests/test_data/fictrac/test.dat
 tests/test_data/fictrac/output.txt
+tests/test_data/fictrac/test-raw_frames.avi
+tests/test_data/fictrac/test-template.jpg
