--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ tests/test_data/fictrac/test.dat
 tests/test_data/fictrac/output.txt
 tests/test_data/fictrac/test-raw_frames.avi
 tests/test_data/fictrac/test-template.jpg
+tests/test_data/fictrac/test-raw_frames.avi
