Fixed typo causing exception when using shuffling with AudioStimPlaylist.
Broke AudioStimPlaylist shuffle behaviour when I added support for
deterministic behaviour by storing seed of RNG. Also fixed the unit test
to get better code coverage for this feature so it won't happen again.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ tests/test_data/fictrac/test-template.jpg
 tests/test_data/fictrac/test-raw_frames.avi
 tests/test_data/fictrac/test-raw_frames.avi
 tests/test_data/fictrac/test-template.jpg
+tests/test_data/fictrac/test-template.jpg
