pytest infrastructure for sound_server hardware tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,5 @@
 [tool:pytest]
+addopts = -vrs
 norecursedirs = .git
+markers =
+    use_soundcard: mark that a test uses and requires a sound card to run
