--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,4 @@ addopts = -vrs
 norecursedirs = .git
 markers =
     use_soundcard: mark that a test uses and requires a sound card to run
+    use_daq: mark that a test uses and requires a ni daq to run
