--- a/demo_experiment_and_playlist.yml
+++ b/demo_experiment_and_playlist.yml
@@ -22,6 +22,7 @@ playlist:
     - video_stim1: {name: 'looming'}
 configuration:
   attenuation_file: null
+  experiment_file: null
   analog_in_channels: null
   digital_in_channels: null
   analog_out_channels: null
