flip PGR fictrac default to true

--- a/demo_experiment_and_playlist.yml
+++ b/demo_experiment_and_playlist.yml
@@ -33,5 +33,5 @@ configuration:
   remote_next_2P_channel: null
   fictrac_config: null
   fictrac_console_out: null
-  pgr_cam_enable: false
+  pgr_cam_disable: false
   visual_stimulus: null
