tests: fix tests and small config file defaults fix

--- a/demo_experiment_and_playlist.yml
+++ b/demo_experiment_and_playlist.yml
@@ -29,9 +29,9 @@ configuration:
   screen_calibration: null
   use_RSE: true
   remote_2P_disable: false
-  remote_start_2P_channel: null
-  remote_stop_2P_channel: null
-  remote_next_2P_channel: null
+  remote_start_2P_channel: 3
+  remote_stop_2P_channel: 4
+  remote_next_2P_channel: 5
   fictrac_config: null
   fictrac_console_out: null
   pgr_cam_disable: false
