--- a/demo_experiment_and_playlist.yml
+++ b/demo_experiment_and_playlist.yml
@@ -23,9 +23,9 @@ playlist:
 configuration:
   attenuation_file: null
   experiment_file: null
-  analog_in_channels: null
-  digital_in_channels: null
-  analog_out_channels: null
+  analog_in_channels: {}
+  digital_in_channels: {}
+  analog_out_channels: {}
   screen_calibration: null
   use_RSE: true
   remote_2P_disable: false
