--- a/configs/downstairs.part.yml
+++ b/configs/downstairs.part.yml
@@ -4,6 +4,6 @@ configuration:
     1: 'Copy of AO2'
     5: 'Microphone Ch1 (left)'
     6: 'Microphone Ch2 (right)'
-    16: 'Copy of 2P mirror y-axis'
+#    16: 'Copy of 2P mirror y-axis'
   analog_out_channels:
     2: 'LED control for optogenetics'
