stimuli: use amplitude for constant signals

--- a/tests/test_data/nivedita_vr1/opto_nivamasan_10sON90sOFF.yml
+++ b/tests/test_data/nivedita_vr1/opto_nivamasan_10sON90sOFF.yml
@@ -3,7 +3,7 @@ playlist:
   audio:
   - Delay:
       attenuator: null
-      intensity: 0.0
+      amplitude: 0.0
       duration: 4000
       name: constant
       post_silence: 26000
