--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ audio/sound_server/asiosdk2/*
 audio/sound_server/portaudio/*
 audio/sound_server/bin/*
 audio/callback_timing.txt
+*.toc.yml
 
 ##### Visual Studio Project Stuff
 
