--- a/tests/sample_data/v2/john_rig.yml
+++ b/tests/sample_data/v2/john_rig.yml
@@ -7,6 +7,7 @@ configuration:
   analog_out_channels:
     0: 'Opto'
   projector_disable: true
+  camera_serial: FAKE
   fictrac_config: 'tests/sample_data/v2/DSX_VR2P_IPIshort_2018_180719_103_output.trimmed_30s.h5'
   delay: 3
 playlist:
