Some more general fixes for package updates.
- matplotlib API deprecations of set_window_title
- Missing dependencies (opencv, PyQt5)
- Need to cast QTimer.start input to int now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,9 @@ dependencies = [
     "h5py",
     "Phidget22",
     "semaphore-win-ctypes",
-    "sounddevice"
+    "sounddevice",
+    "opencv-python",
+    "PyQt5",
 ]
 
 [project.optional-dependencies]
